--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,11 @@
 body {
-  background-color: rgb(0, 0, 0);
+  font-family: "Raleway", sans-serif;
+}
+.bg {
+  background-image: url("../img/bg01.png");
+}
+.heroSection {
+  background-image: url("../img/bg_hero.jpg");
+  background-size: cover;
+  background-position: left;
 }
