--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,5 +7,13 @@ body {
 .heroSection {
   background-image: url("../img/bg_hero.jpg");
   background-size: cover;
-  background-position: left;
+  background-position: center;
+  background-position: 50% 50%;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.icon {
+  font-size: 30px;
 }
